# corretor-simulados

./: .gitignore  .pylintrc  Pipfile  README.md  corretor.spec  corrigir.py  formatar.py  gerar_json.py  index.py  pyproject.toml  somatorio.py  variaveis.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cria-executaveis.yml  cria-exeutaveis.yml  lint-pr-titulo.yml  lint.yml  tests.yml
input/: Gabarito.csv
input/alunos/: cpfs.csv
input/gabarito/: gabarito.csv
input/provas/: d1-e-ae.csv  d1-e.csv  d1-i-ae.csv  d1-i.csv  d2-ae.csv  d2.csv
input/templates/: alunos-dados-template.csv  gabarito-template.csv  resposta-template.csv  respostas-alunos-template.csv
output/: correcao.csv  data.json  template.json
src/: __init__.py  __main__.py  corrigir.py  escrever_arquivo.py  formatar.py  gerar_json.py  gerar_json_aluno.py  gerar_json_disciplina.py  index.py  ler_arquivo.py
src/GUI/: __init__.py  aplication.py  auxiliar.py  constantes.py  variaveis.py
src/auxilio/: checker.py  constantes.py  formatar.py  funcoes_corrigir.py  path.py  somatorio.py  variaveis.py
src/cli/: __init__.py
src/corretores/: __init__.py  corretor_enem.py  corretor_ps.py  corretor_simulinho.py  corretor_ufsc.py  corretores_unificado.py
src/geradores/: __init__.py  gerar_json_aluno.py  gerar_json_disciplina.py  gerar_json_geral_disciplina.py  gerar_json_geral_redacao.py  gerar_ps.py
src/gui/: __init__.py  auxiliar.py  constantes.py
src/leitura_e_escrita/: escrever_arquivo.py  ler_arquivo.py
src/utils/: tipo_correcao.py
tests/: conftest.py
tests/auxilio/: test_checker.py  test_path.py
tests/integration/: integration_test.py
tests/leitura_e_escrita/: test_escrever_arquivo.py  test_ler_arquivo.py
(+24 files in other folders)
