[tool.poetry]
name = "corretor-simulados"
version = "1.0.0"
description = "Corretores do Einstein Floripa (Simulinho, SIMUFSC, SIMUENEM, Feedback Alunos)"
authors = ["Vale do Silicio <vale@einsteinfloripa.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyside6 = "^6.4.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
