[tool.poetry]
name = "corretor-simulados"
version = "0.2.1"
description = "Corretores do Einstein Floripa (Simulinho, SIMUFSC, SIMUENEM, Feedback Alunos)"
authors = ["Vale do Silicio <vale@einsteinfloripa.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyside6 = "^6.5.0"
pandas = "^1.5.3"
pylint = "^2.17.2"
pylint-venv = "^3.0.1"
pytest = "^7.3.1"
pyinstaller = "^5.11.0"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
